test/errors/unclosed_paren.sg
' Test unclosed parenthesis
(def test (foo bar)